# STALL_THEN_STRIKE

./: .env.example  .gitignore  AGENT.md  DESIGN.md  README.md  REPO_ID.txt  git remote -v  git remote -v.pub  memo.txt  pyproject.toml  run_live_drycheck.ps1  run_live_guard_ok.ps1  run_live_start.ps1  run_paper_guard_ok.ps1
.github/workflows/: ci.yml
configs/: base.yml  live.yml  paper.yml  paper_ab_1p3.yml  paper_ca0.yml  paper_plus.yml  paper_real.yml  paper_real_no_reverse.yml  paper_real_no_reverse_stall1000.yml  paper_real_no_reverse_stall1000_ttl1200.yml  paper_real_no_reverse_stall1000_ttl200.yml  paper_real_no_reverse_stall1000_ttl250.yml  paper_real_no_reverse_stall1000_ttl275.yml  paper_real_no_reverse_stall1000_ttl275_spread2.yml  paper_real_no_reverse_stall1000_ttl300.yml  paper_real_no_reverse_stall1000_ttl400.yml  paper_real_no_reverse_stall1000_ttl800.yml  paper_real_rev10.yml  paper_shutdown.yml
src/: __init__.py
src/app/: __init__.py  run_live.py  run_paper.py  run_smoke.py  ws_probe.py  ws_raw_probe.py
src/config/: __init__.py  loader.py
src/engine/: __init__.py  executor.py  inventory.py  live_executor.py  strategy_stall.py
src/features/: cancel_add_ratio.py
src/infra/: __init__.py  http_bitflyer.py  orderbook_view.py  pyb_session.py  ws_mux.py
src/types/: __init__.py  dto.py
tests/: test_guard_errors_threshold.py  test_live_state_sync.py  test_run_live_utils.py
