[tool.poetry]
name = "stall-then-strike"
version = "0.1.0"
description = "bitFlyer CFD FX_BTC_JPY stall-then-strike MM (pybotters版)"
authors = ["you <you@example.com>"]
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pybotters = "<2.0"
pydantic = "^2.8.0"
pyyaml = "^6.0.1"
orjson = "^3.10.0"
loguru = "^0.7.2"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^3.7.0"
ruff = "^0.5.5"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
